[workspace]
members = [
    "common",
    "protocol",
    "storage",
    "cluster",
    "server",
    "bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jja725/ruxio"

[workspace.dependencies]
# Internal crates
ruxio-common = { path = "common" }
ruxio-protocol = { path = "protocol" }
ruxio-storage = { path = "storage" }
ruxio-cluster = { path = "cluster" }

# Async runtime (io_uring)
monoio = { version = "0.2", features = ["splice", "mkdirat"] }

# Arrow ecosystem
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }

# HTTP/2
h2 = "0.4"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring"] }
monoio-rustls = "0.4"
webpki-roots = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Config & observability
config = "0.14"
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
humantime = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"

# etcd + coordination
etcd-client = "0.14"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Signals
ctrlc = "3"

# Misc
lazy_static = "1.4"
hostname = "0.4"
local-ip-address = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
