[package]
name = "ruxio-common"
version = "0.1.0"
edition = "2021"
description = "native file cache library"
repository = "https://github.com/jja725/ruxio"
license = "Apache-2.0"

[lib]
name = "ruxio_common"
crate-type = ["lib"]
path = "src/common_lib.rs"

[dependencies]
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }

tokio = { workspace = true }

bytes = { workspace = true }

lazy_static = { workspace = true }

anyhow = { workspace = true }
config = "0.13.1"
hostname = "0.3"
local-ip-address = "0.5.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"

prometheus = { version = "0.13.3", features = ["process", "push"] }
