[package]
name = "ruxio-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for ruxio distributed cache"

[lib]
name = "ruxio_common"
path = "src/lib.rs"

[dependencies]
monoio = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
hostname = { workspace = true }
local-ip-address = { workspace = true }
serde = { workspace = true }
prometheus = { workspace = true }
