[package]
name = "ruxio-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol, frame codec, and predicate AST for ruxio"

[lib]
name = "ruxio_protocol"
path = "src/lib.rs"

[dependencies]
ruxio-common = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
xxhash-rust = { workspace = true }
